--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-react": "^8.6.0",
     "i18next": "^25.7.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "react": "19.2.0",
