--- a/package.json
+++ b/package.json
@@ -38,13 +38,13 @@
     "jose": "^6.1.3",
     "lucide-react": "^0.555.0",
     "negotiator": "^1.0.0",
-    "next": "16.0.7",
+    "next": "^16.1.6",
     "next-intl": "^4.5.8",
     "postgres": "^3.4.7",
     "prisma": "^7.1.0",
     "qrcode.react": "^4.2.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
